test/expect/cmd.gccxml-and-objc1-stderr.txt
^error: '--castxml-gccxml' does not work with Objective C$
